--- a/GPWEB/index.html
+++ b/GPWEB/index.html
@@ -29,22 +29,25 @@
   </div>
 
   <div class="row" style="height: 7%;">
-      <div class="col-md-3 text-center" style="background-color: rgb(234,29,44);">
+      <div class="text-center" style="background-color: rgb(234,29,44);width: 20%;">
           <img style="width: auto;height:100%" src="assets/img-apps/ifood.png">
       </div>
-      <div class="col-md-3 text-center" style="background-color: rgb(0,0,0);">
+      <div class="text-center" style="background-color: rgb(0,0,0);width: 20%;">
           <img style="width: auto;height:100%" src="assets/img-apps/uber.png">
       </div>
-      <div class="col-md-3 text-center" style="background-color: rgb(255,120,100);">
+      <div class="text-center" style="background-color: rgb(255,120,100);width: 20%;">
           <img style="width: auto;height:100%" class="text-center" src="assets/img-apps/rappi.png">
       </div>
-      <div class="col-md-3 text-center" style="background-color: rgb(152,77,237);">
+      <div class="text-center" style="background-color: rgb(152,77,237);width: 20%;">
           <img style="width: auto;height:100%" src="assets/img-apps/james.png">
       </div>
+      <div class="text-center" style="background-color: rgb(253,198,009);width: 20%;">
+        <img style="width: auto;height:100%" src="assets/img-apps/logo99.png">
+      </div>
   </div>
-  <div class="row" style="height: 68%;overflow-y:auto">
-      <div class="col-md-3" style="color: white;">
-          <div class="row" style="height:100%">
+  <div class="row " style="height: 68%;overflow-y:auto;">
+      <div class="col" style="color: white;">
+          <div class="row" style="height:100%;">
               <div class="col-md-6 text-center" style="background-color:rgb(198,32,38);">
                   <div id="ifoodList">
                   </div>
@@ -55,8 +58,8 @@
               </div>
           </div>
       </div>
-      <div class="col-md-3" style="color: white;">
-          <div class="row" style="height:100%">
+      <div class="col" style="color: white;">
+          <div class="row" style="height:100%;">
               <div class="col-md-6 text-center" style="background-color:rgb(35,31,32)">
                   <div id="uberEatsList">
                   </div>
@@ -67,8 +70,8 @@
               </div>
           </div>
       </div>
-      <div class="col-md-3" style="color: white;">
-          <div class="row" style="height:100%">
+      <div class="col" style="color: white;">
+          <div class="row" style="height:100%;">
               <div class="col-md-6 text-center" style="background-color:rgb(232,109,90)">
                   <div id="rappiList">
                   </div>
@@ -79,7 +82,7 @@
               </div>
           </div>
       </div>
-      <div class="col-md-3" style="color: white;">
+      <div class="col" style="color: white;">
           <div class="row" style="height:100%">
               <div class="col-md-6 text-center" style="background-color:rgb(152,77,237)">
                   <div id="jamesList">
@@ -90,6 +93,18 @@
                   </div>
               </div>
           </div>
+      </div>
+      <div class="col" style="color: white;">
+        <div class="row" style="height:100%;">
+            <div class="col-md-6 text-center" style="background-color:rgb(247, 206, 71)">
+                <div id="logo99List">
+                </div>
+            </div>
+            <div class="col-md-6 text-center" style="background-color:rgb(253,198,009)">
+                <div id="logo99ListTime">
+                </div>
+            </div>
+        </div>
       </div>
   </div>
   <div class="row b-vermelho" style="height: 10%;color:white">
