--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 <head>
   <meta charset="utf-8">
   <title>SistemaGerenciadorDePedidos</title>
-  <base href="/">
+  <base href="/sistemaGerenciadorDePedidos/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   	<!--Bootsrap 4 CDN-->
